--- a/PoC/Base.lproj/Main.storyboard
+++ b/PoC/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CQB-47-WD5" userLabel="GIDignInButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="209"/>
                                                 <state key="normal" title="Sign in with Google"/>
+                                                <connections>
+                                                    <action selector="signOutButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kRd-0l-3nn"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
